fixed some white space on the footer

--- a/src/apps/common/static/css/search.css
+++ b/src/apps/common/static/css/search.css
@@ -173,8 +173,8 @@ ul#child-navigation li.active{background:none;}ul#child-navigation li.active.act
 #footer #popular-topics li#social-media a#youtube-button,#footer #about-us li#social-media a#youtube-button,#footer #help li#social-media a#youtube-button{width:28px;height:32px;background:url(/static/img/base/base-sprite.jpg) no-repeat -64px 0px;}
 #footer #awards{border-left:1px solid #eeeeee;float:left;margin:20px 0;padding:10px;text-align:left;width:290px;}#footer #awards div{width:275px;padding:5px 0 0 20px;}#footer #awards div img{float:left;margin-right:20px;}
 #footer #awards div p{float:left;font-size:10px;font-weight:800;line-height:15px;margin:19px 0;width:140px;}
-#footer #awards div#top-consumer-award h4{background:url(/static/img/base/base-sprite.jpg) no-repeat 0px -79px;width:94px;height:91px;float:left;margin-right:16px;}#footer #awards div#top-consumer-award h4 span{display:none;}
-#footer #awards div#best-buy-award h4{background:url(/static/img/base/base-sprite.jpg) no-repeat -95px -78px;width:94px;height:91px;float:left;margin-right:16px;}#footer #awards div#best-buy-award h4 span{display:none;}
+#footer #awards div#top-consumer-award h4{background:url(/static/img/base/base-sprite.jpg) no-repeat 0px -79px;width:94px;height:89px;float:left;margin-right:16px;}#footer #awards div#top-consumer-award h4 span{display:none;}
+#footer #awards div#best-buy-award h4{background:url(/static/img/base/base-sprite.jpg) no-repeat -95px -80px;width:94px;height:89px;float:left;margin-right:16px;}#footer #awards div#best-buy-award h4 span{display:none;}
 #extra-information{width:960px;margin:10px auto 135px;}#extra-information img{padding-top:10px;}
 #extra-information #legal-text{float:right;width:750px;text-align:right;font-size:11px;line-height:16px;}
 #extra-information #disclaimer{color:#999;font-size:10px;line-height:1.2em;padding-top:5px;text-align:justify;}
