--- a/src/apps/common/static/css/security-news.css
+++ b/src/apps/common/static/css/security-news.css
@@ -1648,7 +1648,7 @@ ul#child-navigation li.active.active a {
 #footer #awards div#top-consumer-award h4 {
   background: url(/static/img/base/base-sprite.jpg) no-repeat 0px -79px;
   width: 94px;
-  height: 91px;
+  height: 89px;
   float: left;
   margin-right: 16px;
 }
@@ -1656,9 +1656,9 @@ ul#child-navigation li.active.active a {
   display: none;
 }
 #footer #awards div#best-buy-award h4 {
-  background: url(/static/img/base/base-sprite.jpg) no-repeat -95px -78px;
+  background: url(/static/img/base/base-sprite.jpg) no-repeat -95px -80px;
   width: 94px;
-  height: 91px;
+  height: 89px;
   float: left;
   margin-right: 16px;
 }
