--- a/src/apps/common/static/less/style.less
+++ b/src/apps/common/static/less/style.less
@@ -1236,7 +1236,7 @@ ul#child-navigation {
                 h4 {
                     .base-sprite(0px, -79px);
                     width: 94px;
-                    height: 91px;
+                    height: 89px;
                     float: left;
                     margin-right: 16px;
                     span {
@@ -1246,9 +1246,9 @@ ul#child-navigation {
             }
             &#best-buy-award {
                 h4 {
-                    .base-sprite(-95px, -78px);
+                    .base-sprite(-95px, -80px);
                     width: 94px;
-                    height: 91px;
+                    height: 89px;
                     float: left;
                     margin-right: 16px;
                     span {
